--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -968,127 +968,138 @@ $("#btnSolicitarDescuento").addEventListener("click", async () => {
   alert(`✅ Descuento del ${porc}% aplicado correctamente.`);
 });
 
-// ✅ Confirmar y guardar venta con o sin descuento
+// ✅ Confirmar y guardar venta con o sin descuento (versión robusta)
 $("#btnConfirmarCobro").onclick = async () => {
-  // 🚧 VALIDACIONES PREVIAS A LA VENTA
-  if (carrito.length === 0) {
-    alert("No hay productos en el carrito.");
-    return;
-  }
-  if (!rutaId || !USUARIO_LOGUEADO) {
-    alert("⚠️ Usuario o ruta no detectados. Vuelve a iniciar sesión.");
-    return;
-  }
-const tot = calcularTotales(descuentoAutorizado);
-const pago = parseFloat($("#montoRecibido").value) || 0;
-const cambio = pago - tot.total;
-if (cambio < 0) {
-  alert("⚠️ El monto recibido es menor al total a pagar.");
-  return;
-}
+  try {
+    // 🚧 Bloqueo visual temporal
+    const overlay = document.createElement("div");
+    overlay.id = "overlayBloqueo";
+    overlay.innerHTML = `
+      <div style="
+        position:fixed;inset:0;background:rgba(0,0,0,.75);
+        display:flex;flex-direction:column;align-items:center;justify-content:center;
+        color:#fff;z-index:99999;font-size:20px;font-weight:600;">
+        <div style="animation:spin 1s linear infinite;border:5px solid #fff;
+          border-top-color:#0c6cbd;border-radius:50%;width:70px;height:70px;margin-bottom:16px;">
+        </div>
+        <div>GENERANDO TICKET<br>FAVOR DE ESPERAR...</div>
+      </div>
+      <style>@keyframes spin{to{transform:rotate(360deg);}}</style>
+    `;
+    document.body.appendChild(overlay);
 
-// 🧮 Folio incremental por usuario y fecha (reinicia cada día)
-let folio = "";
-const hoy = new Date();
-const fechaTag = hoy.toISOString().slice(0, 10).replace(/-/g, ""); // ej: 20251102
+    // 🔒 Deshabilitar botones para evitar doble clic
+    document.querySelectorAll("button").forEach(b => b.disabled = true);
 
-const usuarioTag = (USUARIO_LOGUEADO.usuario || "USR")
-  .toUpperCase()
-  .replace(/\s+/g, "")
-  .slice(0, 8); // ej: MADERO
+    // 🚧 VALIDACIONES
+    if (carrito.length === 0) {
+      alert("No hay productos en el carrito.");
+      return;
+    }
+    if (!rutaId || !USUARIO_LOGUEADO) {
+      alert("⚠️ Usuario o ruta no detectados. Vuelve a iniciar sesión.");
+      return;
+    }
 
-// Documento: contadores/{usuarioTag_20251102}
-const folioId = `${usuarioTag}_${fechaTag}`;
-const folioRef = doc(db, "contadores", folioId);
+    const tot = calcularTotales(descuentoAutorizado);
+    const pago = parseFloat($("#montoRecibido").value) || 0;
+    const cambio = pago - tot.total;
+    if (cambio < 0) {
+      alert("⚠️ El monto recibido es menor al total a pagar.");
+      return;
+    }
 
-await runTransaction(db, async (tx) => {
-  const folioSnap = await tx.get(folioRef);
-  let consecutivo = 1;
+    // 🧮 Folio incremental por usuario y fecha
+    let folio = "";
+    const hoy = new Date();
+    const fechaTag = hoy.toISOString().slice(0, 10).replace(/-/g, "");
+    const usuarioTag = (USUARIO_LOGUEADO.usuario || "USR").toUpperCase().replace(/\s+/g, "").slice(0, 8);
+    const folioId = `${usuarioTag}_${fechaTag}`;
+    const folioRef = doc(db, "contadores", folioId);
 
-  if (folioSnap.exists()) {
-    consecutivo = (folioSnap.data().ultimo || 0) + 1;
-  }
+    await runTransaction(db, async (tx) => {
+      const snap = await tx.get(folioRef);
+      let consecutivo = snap.exists() ? (snap.data().ultimo || 0) + 1 : 1;
+      tx.set(folioRef, { ultimo: consecutivo, fecha: fechaTag });
+      folio = `${usuarioTag}-${fechaTag}-${String(consecutivo).padStart(4, "0")}`;
+    });
 
-  // 🔢 Guardar el nuevo número consecutivo
-  tx.set(folioRef, { ultimo: consecutivo, fecha: fechaTag });
-
-  // 🧾 Formato: MADERO-20251102-0001
-  folio = `${usuarioTag}-${fechaTag}-${String(consecutivo).padStart(4, "0")}`;
-});
-
-
-// 🧾 Venta con detalle contable completo
-const venta = {
-  folio,
-  rutaId,
-  cliente: $("#cliente").value || "PÚBLICO EN GENERAL",
-  cortado: false,
-  descuento_porcentaje: descuentoAutorizado,
-  descuento_monto: tot.descuento,
-  resumen_financiero: {
-    subtotal: tot.subtotal,
-    descuento: tot.descuento,
-    impuestos: tot.impuestos,
-    total: tot.total,
-    // 🔹 Cálculo adicional para reportes contables
-    costo_total: carrito.reduce((s, x) => s + (x.costoUnit || 0) * x.cantidad, 0).toFixed(2),
-    utilidad_total: carrito.reduce((s, x) => s + ((x.importe || 0) - (x.costoUnit || 0) * x.cantidad), 0).toFixed(2),
-    margen_porcentaje: (() => {
-      const utilidad = carrito.reduce((s, x) => s + ((x.importe || 0) - (x.costoUnit || 0) * x.cantidad), 0);
-      return tot.total > 0 ? ((utilidad / tot.total) * 100).toFixed(2) : 0;
-    })()
-  },
-  fecha: serverTimestamp(),
-  fecha_txt: new Date().toLocaleString("es-MX", { hour12: true }),
-  usuarioId: USUARIO_LOGUEADO?.id || "",
-  usuarioNombre: USUARIO_LOGUEADO?.nombre || "",
-  notas: $("#notasCobro").value || "",
-  autorizado_por: descuentoAutorizado > 0 ? "Gerente autorizado" : null,
-  ubicacion: await obtenerUbicacionRobusta().catch(() => null),
-
-  // 💼 DETALLE COMPLETO DE CADA PRODUCTO
-  detalle: carrito.map(it => {
-    const depId = it.departamento_id?.toString() || "0";
-    const depInfo = departamentos[depId] || { nombre: "SIN DEP", iva: 0, ieps: 0 };
-
-    const costoUnit = Number(it.costoUnit || 0);
-    const costoTotal = it.cantidad * costoUnit;
-    const utilidad = it.importe - costoTotal;
-
-    return {
-      id: it.id,
-      nombre: it.nombre,
-      codigo: it.codigo,
-      cantidad: it.cantidad,
-      precio_unit: it.precioUnit,
-      importe: it.importe,
-      costo_unit: +costoUnit.toFixed(2),
-      costo_total: +costoTotal.toFixed(2),
-      utilidad: +utilidad.toFixed(2),
-      departamento_id: depId,
-      departamento_info: depInfo
+    // 🧾 Armar venta completa
+    const venta = {
+      folio,
+      rutaId,
+      cliente: $("#cliente").value || "PÚBLICO EN GENERAL",
+      cortado: false,
+      descuento_porcentaje: descuentoAutorizado,
+      descuento_monto: tot.descuento,
+      resumen_financiero: {
+        subtotal: tot.subtotal,
+        descuento: tot.descuento,
+        impuestos: tot.impuestos,
+        total: tot.total,
+        costo_total: carrito.reduce((s, x) => s + (x.costoUnit || 0) * x.cantidad, 0).toFixed(2),
+        utilidad_total: carrito.reduce((s, x) => s + ((x.importe || 0) - (x.costoUnit || 0) * x.cantidad), 0).toFixed(2),
+        margen_porcentaje: (() => {
+          const utilidad = carrito.reduce((s, x) => s + ((x.importe || 0) - (x.costoUnit || 0) * x.cantidad), 0);
+          return tot.total > 0 ? ((utilidad / tot.total) * 100).toFixed(2) : 0;
+        })()
+      },
+      fecha: serverTimestamp(),
+      fecha_txt: new Date().toLocaleString("es-MX", { hour12: true }),
+      usuarioId: USUARIO_LOGUEADO?.id || "",
+      usuarioNombre: USUARIO_LOGUEADO?.nombre || "",
+      notas: $("#notasCobro").value || "",
+      autorizado_por: descuentoAutorizado > 0 ? "Gerente autorizado" : null,
+      ubicacion: await obtenerUbicacionRobusta().catch(() => null),
+      detalle: carrito.map(it => ({
+        id: it.id,
+        nombre: it.nombre,
+        codigo: it.codigo,
+        cantidad: it.cantidad,
+        precio_unit: it.precioUnit,
+        importe: it.importe,
+        costo_unit: +(it.costoUnit || 0).toFixed(2),
+        costo_total: +(it.cantidad * (it.costoUnit || 0)).toFixed(2),
+        utilidad: +(it.importe - it.cantidad * (it.costoUnit || 0)).toFixed(2),
+        departamento_id: it.departamento_id || "0"
+      }))
     };
-  })
+
+    // 💾 Guardar venta + Telegram + PDF
+    await guardarVentaEnFirestore(venta);
+    await enviarTelegram(venta);
+    rellenarTicket(venta);
+    imprimirTicketEstilado();
+
+    // 💾 PDF local
+    try {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF();
+      pdf.setFont("courier", "bold");
+      pdf.setFontSize(11);
+      const text = document.querySelector("#ticket").innerText;
+      pdf.text(text, 10, 10);
+      pdf.save(`Ticket_${folio}.pdf`);
+    } catch (e) { console.error("PDF error:", e); }
+
+    // 🧹 Limpieza y regreso
+    carrito = [];
+    renderDebounced();
+    cerrarCobro();
+    pantallaCarrito.style.display = "none";
+    pantallaVenta.style.display = "flex";
+    document.getElementById("buscador").focus();
+
+  } catch (err) {
+    console.error("❌ Error al confirmar venta:", err);
+    alert("Error al generar venta. Intenta de nuevo.");
+  } finally {
+    // 🔓 Reactivar todo y quitar overlay
+    document.querySelectorAll("button").forEach(b => b.disabled = false);
+    const overlay = document.getElementById("overlayBloqueo");
+    if (overlay) overlay.remove();
+  }
 };
-
-
-await guardarVentaEnFirestore(venta);
-await enviarTelegram(venta);
-rellenarTicket(venta);
-imprimirTicketEstilado();
-
-// 💾 Descargar PDF localmente
-try {
-  const { jsPDF } = window.jspdf;
-  const pdf = new jsPDF();
-  const ticketText = document.querySelector("#ticket").innerText;
-  pdf.setFont("courier", "bold");
-  pdf.setFontSize(11);
-  pdf.text(ticketText, 10, 10);
-  pdf.save(`Ticket_${folio}.pdf`);
-} catch (err) {
-  console.error("No se pudo generar PDF local:", err);
-}
 
 // 🧹 Limpieza y regreso automático
 carrito = [];
