--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1051,19 +1051,27 @@ $("#btnConfirmarCobro").onclick = async () => {
       notas: $("#notasCobro").value || "",
       autorizado_por: descuentoAutorizado > 0 ? "Gerente autorizado" : null,
       ubicacion: await obtenerUbicacionRobusta().catch(() => null),
-      detalle: carrito.map(it => ({
-        id: it.id,
-        nombre: it.nombre,
-        codigo: it.codigo,
-        cantidad: it.cantidad,
-        precio_unit: it.precioUnit,
-        importe: it.importe,
-        costo_unit: +(it.costoUnit || 0).toFixed(2),
-        costo_total: +(it.cantidad * (it.costoUnit || 0)).toFixed(2),
-        utilidad: +(it.importe - it.cantidad * (it.costoUnit || 0)).toFixed(2),
-        departamento_id: it.departamento_id || "0"
-      }))
-    };
+detalle: carrito.map(it => {
+  const dep = departamentos[it.departamento_id] || { id: 0, nombre: "SIN DEP", iva: 0, ieps: 0 };
+  return {
+    id: it.id,
+    nombre: it.nombre,
+    codigo: it.codigo,
+    cantidad: it.cantidad,
+    precio_unit: it.precioUnit,
+    importe: it.importe,
+    costo_unit: +(it.costoUnit || 0).toFixed(2),
+    costo_total: +(it.cantidad * (it.costoUnit || 0)).toFixed(2),
+    utilidad: +(it.importe - it.cantidad * (it.costoUnit || 0)).toFixed(2),
+    departamento_id: it.departamento_id || "0",
+    departamento_info: {
+      id: dep.id,
+      nombre: dep.nombre,
+      iva: dep.iva,
+      ieps: dep.ieps
+    }
+  };
+})
 
     // 💾 Guardar venta + Telegram + PDF
     await guardarVentaEnFirestore(venta);
