--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1590,7 +1590,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 const btnResumen = document.getElementById("btnResumen");
 if (btnResumen) {
   btnResumen.addEventListener("click", () => {
-    window.location.href = "resumen.html";
+    window.location.href = "ticketsresumen.html";
   });
 }
 
