--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -656,7 +656,7 @@ function addProduct(prod, cant = 1) {
 }
 render(); // Usa render normal
 }
-function delItem(id){ carrito=carrito.filter(x=>x.id!==id); renderDebounced(); }
+function delItem(id){ carrito=carrito.filter(x=>x.id!==id); render(); }
 window.delItem=delItem;
 
 /* ===========================================================
@@ -1073,9 +1073,6 @@ detalle: carrito.map(it => {
   };
 })
 }  // ← SOLO CIERRA LA LLAVE DEL OBJETO 'venta', SIN COMA EXTRA
-
-    // 💾 Guardar venta + Telegram + PDF
-    await guardarVentaEnFirestore(venta);
     // 💾 Guardar venta + Telegram + PDF
     await guardarVentaEnFirestore(venta);
     await enviarTelegram(venta);
