--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -956,7 +956,7 @@ function ejecutarBusqueda(texto) {
 }
 
 /* ===========================================================
-   🔎 DETECTOR UNIVERSAL DE ESCÁNER (v3.0 ESTABLE)
+   🔎 DETECTOR UNIVERSAL DE ESCÁNER (v4.1 híbrido Android/PC)
    =========================================================== */
 let scanBuffer = "";
 let scanTimer = null;
@@ -974,52 +974,49 @@ function procesarCodigoEscaneado(codigo) {
   modoScanner = false;
 }
 
-// 🔹 Captura de caracteres del lector Eyoyo
+/* 🧩 MODO PC (keydown HID) */
 buscador.addEventListener("keydown", (e) => {
-  // Si presiona Enter y ya hay datos → ejecutar búsqueda directa
   if (e.key === "Enter" && scanBuffer.length > 0) {
     e.preventDefault();
     procesarCodigoEscaneado(scanBuffer);
     return;
   }
 
-  // Solo acumular teclas imprimibles
   if (e.key.length === 1 && !e.ctrlKey && !e.altKey && !e.metaKey) {
     scanBuffer += e.key;
     modoScanner = true;
-
     clearTimeout(scanTimer);
-    // Espera 450 ms sin recibir más caracteres = escaneo terminado
-    scanTimer = setTimeout(() => {
-      procesarCodigoEscaneado(scanBuffer);
-    }, 450);
+    scanTimer = setTimeout(() => procesarCodigoEscaneado(scanBuffer), 400);
   }
 });
 
-// 🔹 Si pierde el foco, procesa lo que haya en el buffer
-buscador.addEventListener("blur", () => {
-  if (modoScanner && scanBuffer.length > 0) {
+/* 🧩 MODO ANDROID (evento input HID-Bluetooth) */
+buscador.addEventListener("input", (e) => {
+  const valor = e.target.value.trim();
+  if (!valor) return;
+
+  modoScanner = true;
+  scanBuffer = valor;
+  clearTimeout(scanTimer);
+
+  // Espera 300 ms sin nuevos caracteres antes de procesar
+  scanTimer = setTimeout(() => {
     procesarCodigoEscaneado(scanBuffer);
-  }
+  }, 300);
 });
 
-// 🔍 BOTÓN DE BÚSQUEDA MANUAL (cuando escriben texto)
+/* 🔹 Procesar también si el input pierde el foco */
+buscador.addEventListener("blur", () => {
+  if (modoScanner && scanBuffer.length > 0) procesarCodigoEscaneado(scanBuffer);
+});
 
-
-// 🧭 BOTÓN DE BÚSQUEDA MANUAL
+/* 🔍 BOTÓN DE BÚSQUEDA MANUAL */
 document.getElementById("btnBuscarManual").addEventListener("click", () => {
   const texto = buscador.value.trim();
   if (texto.length > 0) ejecutarBusqueda(texto);
   else toast("Escribe o escanea un código primero");
 });
 
-// 🧩 Si el usuario escribe manualmente, también busca a partir de 3 letras
-buscador.addEventListener("input", () => {
-  if (escaneando) return; // no interferir si viene del escáner
-  const texto = buscador.value.trim();
-  if (texto.length >= 3) ejecutarBusqueda(texto);
-  else resultadosDiv.style.display = "none";
-});
 
 /* ===========================================================
    💳 SECCIÓN 11: MODAL DE COBRO CON AUTORIZACIÓN DE DESCUENTO
